UniiaAdmin.Auth/fleet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-auth
spec:
  selector:
    app: admin-auth
  ports:
  - port: 80
    targetPort: 7193
  type: ClusterIP
